# mavspec

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.gitlab-ci/: test.gitlab-ci.yml  utils.gitlab-ci.yml
examples/: parser.rs
examples/mavlib/: Cargo.toml  build.rs
examples/mavlib/examples/: basic.rs  tcp_client.rs
examples/mavlib/src/: lib.rs
examples/rust/: .gitignore  Cargo.toml  README.md  build.rs  message_definitions
examples/rust/src/: lib.rs
interfaces/mavlib_core/: Cargo.toml
interfaces/mavlib_core/src/: consts.rs  errors.rs  frame.rs  header.rs  lib.rs  mav_frame_v1.rs  mav_frame_v2.rs  message.rs  payload.rs  stx.rs  types.rs  version.rs
mavcodegen/: Cargo.toml
mavcodegen/src/: lib.rs
mavcodegen/src/proto/: mod.rs
mavcodegen/src/rust/: build_helper.rs  builder.rs  conventions.rs  generator.rs  helpers.rs  mod.rs  utils.rs
mavcodegen/src/rust/templates/: mod.rs
mavcodegen/src/rust/templates/dialects/: enums.rs  messages.rs  mod.rs
mavcodegen/tests/: rust_integration_tests.rs
mavlib/: Cargo.toml  build.rs
mavlib/src/: api.rs  errors.rs  lib.rs
mavlib/src/io/: endpoint.rs  mod.rs
mavlib_core/: Cargo.toml  README.md  build.rs
mavlib_core/examples/: tcp_basic.rs  tcp_client.rs  tcp_ping_pong.rs  tcp_server.rs
mavlib_core/src/: consts.rs  errors.rs  frame.rs  header.rs  io.rs  lib.rs  signature.rs  stx.rs  types.rs  utils.rs
mavlib_core/src/io/: mod.rs  no_std.rs  sender.rs
mavlib_core/src/protocol/: frame.rs  header.rs  mod.rs  signature.rs
mavlib_core/src/utils/: slice_rw.rs
mavlib_spec/: Cargo.toml
mavlib_spec/src/: consts.rs  dialect.rs  errors.rs  lib.rs  message.rs  payload.rs  types.rs  version.rs
mavspec/: Cargo.toml  build.rs
mavspec/src/: lib.rs
mavspec/src/rust/: build_helper.rs  conventions.rs  generator.rs  mod.rs  utils.rs
mavspec/src/rust/templates/dialects/: enums.rs  messages.rs  mod.rs
mavspec/tests/: rust_integration_tests.rs
mavspec_rust_derive/: Cargo.toml  README.md
mavspec_rust_derive/examples/: mavspec_rust_derive_example.rs  mavspec_rust_derive_example_dialect.rs
mavspec_rust_derive/src/: consts.rs  dialect.rs  enums.rs  errors.rs  field_types.rs  lib.rs  message.rs  message_attributes.rs  message_field.rs
mavspec_rust_gen/: Cargo.toml  README.md  build.rs  message_definitions
mavspec_rust_gen/src/: build_helper.rs  conventions.rs  error.rs  generator.rs  helpers.rs  lib.rs  utils.rs
mavspec_rust_gen/src/specs/: mod.rs
mavspec_rust_gen/src/specs/dialects/: mod.rs  root.rs
mavspec_rust_gen/src/specs/dialects/dialect/: enums.rs  messages.rs  mod.rs  root.rs
mavspec_rust_gen/src/templates/: helpers.rs  mod.rs  root.rs
mavspec_rust_gen/src/templates/dialects/: enums.rs  messages.rs  mod.rs  root.rs
mavspec_rust_gen/src/templates/dialects/dialect/: enums.rs  messages.rs  mod.rs  root.rs
mavspec_rust_gen/tests/: rust_gen_integration_tests.rs  rust_integration_tests.rs
mavspec_rust_spec/: Cargo.toml  README.md
mavspec_rust_spec/src/: dialect.rs  error.rs  errors.rs  lib.rs  message.rs  payload.rs  types.rs
message_definitions/extra/: MAVInspect_test.xml  MAVSpec_test.xml  crazyflight.xml
src/: lib.rs
src/parser/: definition.rs  errors.rs  inspector.rs  mod.rs
src/parser/xml/: context.rs  context_stack.rs  entities.rs  mod.rs  parser.rs
src/protocol/: dialect.rs  errors.rs  mod.rs  protocol.rs  traits.rs
src/protocol/common/: deprecated.rs  mav_type.rs  mod.rs  units.rs  value.rs
src/protocol/enums/: enum_entry.rs  enums.rs  mav_cmd_flags.rs  mav_cmd_param.rs  mod.rs
src/protocol/messages/: message.rs  message_field.rs  message_field_invalid_value.rs  mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
tests/rust/: Cargo.toml  build.rs
tests/rust/src/: lib.rs
tests/rust/tests/: rust_gen_integration_tests.rs
