[package]
name = "mavcodegen"
description = "A set of code generation utilities for MAVLink protocol."
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones", "parser"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "command-line-utilities",
    "parsing"
]
resolver = "2"

[lib]
name = "mavcodegen"
path = "src/lib.rs"

[[bin]]
name = "mavcodegen"
path = "src/bin/mavcodegen.rs"

[dependencies]
anyhow = "1.0.75"
cargo-manifest = { version = "0.12.1", optional = true }
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
handlebars = "5.0.0-beta.5"
heck = "0.5.0-rc.1"
log = "0.4.20"
#mavspec = { version = "0.1.0-alpha4", features = ["serde"] }
mavspec = { git = "https://gitlab.com/mavka/libs/mavspec.git", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[features]
default = ["rust", "build_utils"]
build_utils = ["dep:cargo-manifest"]
rust = []

[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["default", "rust", "build_utils"]
