[package]
name = "mavlib"
description = "An example library to process MAVLink messages."
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"
publish = false

[dependencies]
mavlib_spec = { path = "../mavlib_spec", default-features = false }
mavlib_core = { path = "../mavlib_core", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
tbytes = "0.1.0-alpha2"
#num-traits = { version = "0.2.17", default-features = false }
#tokio = { version = "1.34.0",  features = ["full"]}


[build-dependencies]
mavcodegen = { path = "../mavcodegen", features = ["rust"], default-features = false }
mavspec = { version = "0.1.0-alpha1", default-features = false, features = ["serde"] }

[dev-dependencies]

[features]
## Enables memory allocation support.
alloc = ["mavlib_spec/alloc", "serde/alloc"]
## Enables `std` library.
std = ["alloc", "mavlib_spec/std", "serde/std"]
## Enables serde support
serde = ["dep:serde"]

[lib]
name = "mavlib"
path = "src/lib.rs"
