[package]
name = "mavlib"
description = "An example library to process MAVLink messages."
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavspec"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"
publish = false

[dependencies]
mavspec = { path = "../mavspec", default-features = false, features = ["rust"] }
mavlib_core = { path = "../mavlib_core", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", default-features = false, optional = true }
tbytes = "0.1.0-alpha2"
#num-traits = { version = "0.2.17", default-features = false }
#tokio = { version = "1.34.0",  features = ["full"]}


[build-dependencies]
mavspec = { path = "../mavspec", features = ["rust_gen"], default-features = false }
mavinspect = "0.1.0"

[dev-dependencies]

[features]
## Enables memory allocation support.
alloc = [
    "mavspec/alloc",
    "serde/alloc",
]
## Enables `std` library.
std = [
    "alloc",
    "mavspec/std",
    "serde/std",
]
## Enables serde support (with `serde-big-array` for large arrays)
serde = [
    "dep:serde",
    "dep:serde_arrays",
]

[lib]
name = "mavlib"
path = "src/lib.rs"
