[package]
name = "mavlib_core"
description = "MAVLib core features"
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[dependencies]
crc-any = { version = "2.4.3", default-features = false }
mavlib_spec = { path = "../mavlib_spec", default-features = false }
tbytes = { version = "0.1.0-alpha1", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0.50", optional = true }

[features]
## Default features
default = ["std"]
## Enables memory allocation support.
alloc = [
    "mavlib_spec/alloc",
    "serde/alloc",
    "tbytes/alloc",
]
## Enables Rust std library.
std = [
    "alloc",
    "mavlib_spec/std",
    "serde/std",
    "tbytes/std",
    "thiserror",
]
## Enables serde support.
serde = [
    "dep:serde",
    "mavlib_spec/serde"
]

[lib]
name = "mavlib_core"
path = "src/lib.rs"

[[example]]
name = "tcp_basic"
test = true
