[package]
name = "mavlib_core"
description = "Minimalistic MAVLink client"
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[dependencies]
crc-any = { version = "2.4.3", default-features = false }
mavlib_spec = { path = "../mavlib_spec", default-features = false }
tbytes = { version = "0.1.0-alpha1", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", default-features = false, optional = true }
sha2 = { version = "0.10.8", default-features = false, optional = true }
thiserror = { version = "1.0.50", optional = true }

[dev-dependencies]
log = "0.4.20"
env_logger = "0.10.1"

[build-dependencies]
mavcodegen = { path = "../mavcodegen", features = ["rust"], default-features = false }
#mavspec = { version = "0.1.0-alpha4", default-features = false, features = ["serde"] }
mavspec = { git = "https://gitlab.com/mavka/libs/mavspec.git" }

[features]
## Default features
default = ["std", "minimal", "sha2"]
## Enables memory allocation support.
alloc = [
    "mavlib_spec/alloc",
    "serde/alloc",
    "tbytes/alloc",
]
sha2 = ["dep:sha2"]
## Enables Rust std library.
std = [
    "alloc",
    "mavlib_spec/std",
    "serde/std",
    "sha2/std",
    "tbytes/std",
    "thiserror",
]
## Enables serde support.
serde = [
    "dep:serde",
    "mavlib_spec/serde",
    "dep:serde_arrays",
]
## Include `minimal` dialect
minimal = []
## Include `common` dialect
common = ["minimal"]
## Include `ardupilotmega` dialect
ardupilotmega = ["minimal", "common"]
## Include `all` meta-dialect
all = ["common", "ardupilotmega"]

[lib]
name = "mavlib_core"
path = "src/lib.rs"

[[example]]
name = "tcp_basic"
test = true
required-features = ["std", "minimal", "sha2"]

[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["default", "serde", "all"]
