[package]
name = "mavlib_spec"
description = "Core interfaces for MAVLib."
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[dependencies]
tbytes = { version = "0.1.0-alpha1", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }

[features]
## Enables memory allocation support.
alloc = ["tbytes/alloc", "serde/alloc", "serde/std"]
## Enables Rust std library.
std = ["alloc", "tbytes/std"]
## Enables serde support.
serde = ["dep:serde"]

[lib]
name = "mavlib_spec"
path = "src/lib.rs"
