[package]
name = "mavspec"
description = "A set of code generation utilities for MAVLink protocol."
version = "0.1.0-alpha4"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavspec"
keywords = ["MAVLink", "UAV", "drones", "parser"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "command-line-utilities",
    "parsing"
]
resolver = "2"

[lib]
name = "mavspec"
path = "src/lib.rs"

[[bin]]
name = "mavspec"
path = "src/bin/mavspec.rs"
required-features = ["cli", "rust_gen"]

[dependencies]
# External dependencies
anyhow = { version = "1.0.75", optional = true }
clap = { version = "4.4.8", features = ["derive"], optional = true }
env_logger = { version = "0.10.1", optional = true }
log = { version = "0.4.20", optional = true }

# Internal crates
mavspec_rust_gen = { version = "0.1.0-alpha4", path = "../mavspec_rust_gen", optional = true }
mavspec_rust_spec = { version = "0.1.0-alpha4", path = "../mavspec_rust_spec", optional = true }

[dev-dependencies]
mavinspect = { version = "0.1.0", features = ["serde"] }

[features]
default = ["rust", "rust_gen"]

alloc = ["mavspec_rust_spec/alloc"]
serde = ["mavspec_rust_spec/serde"]
std = ["mavspec_rust_spec/std"]

rust = ["dep:mavspec_rust_spec"]
rust_gen = ["std", "dep:mavspec_rust_gen", "rust"]

cli = ["dep:anyhow", "dep:clap", "dep:log", "dep:env_logger"]

[package.metadata.docs.rs]
features = ["default", "rust", "rust_gen"]
rustdoc-args = ["--cfg", "docsrs"]

