[package]
name = "mavspec"
description = "A set of code generation utilities for MAVLink protocol."
version = "0.3.2"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "../README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavspec"
keywords = ["MAVLink", "UAV", "drones", "parser"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "command-line-utilities",
    "parsing"
]
resolver = "2"

[lib]
name = "mavspec"
path = "src/lib.rs"

[[bin]]
name = "mavspec"
path = "src/bin/mavspec.rs"
required-features = ["cli"]

###########################################################
# Dependencies
###########################################################
[dependencies]
# External dependencies
clap = { version = "4.4.8", features = ["derive"], optional = true }
env_logger = { version = "0.11.0", optional = true }
log = { version = "0.4.20", optional = true }

# Internal crates
mavspec_rust_gen = { version = "0.3.2", path = "../mavspec_rust_gen", optional = true }
mavspec_rust_spec = { version = "0.3.2", path = "../mavspec_rust_spec", optional = true }
mavspec_rust_derive = { version = "0.3.2", path = "../mavspec_rust_derive", optional = true }

###########################################################
# Features
###########################################################
[features]
## Default features
default = []
## Enables unstable API features.
unstable = ["mavspec_rust_gen/unstable", "mavspec_rust_spec/unstable"]
## Use protocol CRC-fingerprints to avoid re-generating files
fingerprints = ["mavspec_rust_gen/fingerprints"]

## Enable serde support
serde = ["mavspec_rust_spec/serde"]

## Enable global allocator
alloc = ["mavspec_rust_spec/alloc"]
## Enable standard library
std = ["alloc", "mavspec_rust_spec/std"]

## Rust core interfaces
rust = ["dep:mavspec_rust_spec", "dep:mavspec_rust_derive"]
## Rust code-generation tools
rust_gen = ["std", "dep:mavspec_rust_gen", "rust"]

## All core interfaces
specs = ["rust"]
## All generators
generators = ["rust_gen"]

## Command-line utilities
cli = ["dep:clap", "dep:log", "dep:env_logger", "generators"]

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
features = ["rust", "rust_gen", "serde", "unstable"]
rustdoc-args = ["--cfg", "docsrs"]

