[package]
name = "mavspec_rust_derive"
description = "Procedural macros for MAVSpec's Rust code generation toolchain."
version = "0.3.0-rc1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavspec"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[lib]
proc-macro = true
name = "mavspec_rust_derive"
path = "src/lib.rs"

[[example]]
name = "mavspec_rust_derive_example"
test = true

###########################################################
# Dependencies
###########################################################
[dependencies]
heck = "0.5.0-rc.1"
proc-macro2 = "1.0.76"
syn = "2.0.48"
quote = "1.0.35"
thiserror = "1.0.56"

[dev-dependencies]
bitflags = "2.4.2"
env_logger = "0.11.0"
log = "0.4.20"
mavspec = { path = "../mavspec", default-features = false, features = ["rust", "std"] }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
serde_arrays = { version = "0.1.0", default-features = false }

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = []
