[package]
name = "mavspec_rust_derive"
description = "Procedural macros for MAVSpec's Rust code generation toolchain."
version = "0.3.3"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavspec"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[lib]
proc-macro = true
name = "mavspec_rust_derive"
path = "src/lib.rs"

[[example]]
name = "mavspec_rust_derive_example"
test = true

[[example]]
name = "mavspec_rust_derive_example_dialect"
test = true

###########################################################
# Dependencies
###########################################################
[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.79"
syn = "2.0.55"
quote = "1.0.35"
thiserror = "1.0.58"
crc-any = { version = "2.4.4", default-features = false }

[dev-dependencies]
bitflags = "2.5.0"
env_logger = "0.11.3"
log = "0.4.21"
mavspec = { path = "../mavspec", default-features = false, features = ["rust", "std"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_arrays = { version = "0.1.0", default-features = false }

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = []
