[package]
name = "mavspec_rust_gen"
description = "Rust code generation module for MAVSpec."
version = "0.1.0-alpha8"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavspec"
keywords = ["MAVLink", "UAV", "drones", "parser", "code-generator"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[lib]
name = "mavspec_rust_gen"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
anyhow = "1.0.75"
cargo-manifest = "0.12.1"
handlebars = "5.0.0-beta.5"
heck = "0.5.0-rc.1"
log = "0.4.20"
mavinspect = { version = "0.1.1", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
mavspec = { path = "../mavspec", default-features = false, features = ["rust_gen"] }

###########################################################
# Features
###########################################################
[features]
## Default features.
default = []
## Enables unstable API features.
unstable = []

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["unstable"]

[package.metadata.cargo-machete]
ignored = ["serde_json"]
