[package]
name = "mavspec_rust_gen"
description = "Rust code generation module for MAVSpec."
version = "0.3.3"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavspec"
keywords = ["MAVLink", "UAV", "drones", "parser", "code-generator"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[lib]
name = "mavspec_rust_gen"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
base64 = "0.22.0"
cargo-manifest = "0.13.0"
heck = "0.5.0"
log = "0.4.21"
mavinspect = { version = "0.2.4", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"

# AST tools
prettyplease = "0.2.17"
proc-macro2 = "1.0.79"
syn = "2.0.55"
quote = "1.0.35"

[dev-dependencies]
mavspec = { path = "../mavspec", default-features = false, features = ["rust_gen"] }

###########################################################
# Features
###########################################################
[features]
## Default features.
default = []
## Enables unstable API features.
unstable = []
## Use protocol CRC-fingerprints to avoid re-generating files
fingerprints = []

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["unstable"]

[package.metadata.cargo-machete]
ignored = ["serde_json"]
