[package]
name = "mavspec_rust_spec"
description = "Core interfaces for MAVSpec's Rust code generation toolchain."
version = "0.3.4"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavspec"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://mavka.gitlab.io/home/projects/mavspec"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"
include = [
    "src",
    "Cargo.toml"
]

[lib]
name = "mavspec_rust_spec"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
bitflags = { version = "2.5.0", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
tbytes = { version = "0.1.0", default-features = false }

###########################################################
# Features
###########################################################
[features]
## Enables unstable API features.
unstable = []
## Enables memory allocation support.
alloc = [
    "tbytes/alloc",
    "serde/alloc",
    "serde/std",
]
## Enables Rust std library.
std = [
    "alloc",
    "tbytes/std",
    "bitflags/std",
]
## Enables Serde support.
serde = [
    "dep:serde",
    "bitflags/serde",
]

###########################################################
# Metadata
###########################################################
[package.metadata.docs.rs]
# Features to include into `docs.rs` documentation
features = ["std", "serde", "unstable"]
