[package]
name = "mavlib_core"
description = "Core interfaces for MAVLib."
version = "0.1.0-alpha1"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
repository = "https://gitlab.com/mavka/libs/mavcodegen"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://gitlab.com/mavka/libs/mavcodegen"
keywords = ["MAVLink", "UAV", "drones"]
categories = [
    "aerospace::protocols",
    "aerospace::drones",
    "aerospace::unmanned-aerial-vehicles",
    "no-std",
    "no-std::no-alloc",
]
resolver = "2"

[dependencies]
tbytes = { version = "0.1.0-alpha1", default-features = false }

[features]
std = ["alloc", "tbytes/std"]
alloc = ["tbytes/alloc"]

[lib]
name = "mavlib_core"
path = "src/lib.rs"
