[package]
name = "mavspec_tests_rust"
description = "Tests for MAVSpec Rust code generation"
version = "0.0.0"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
resolver = "2"
publish = false

[lib]
name = "mavspec_tests_rust"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
mavspec = { path = "../../mavspec", default-features = false, features = ["rust"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", default-features = false, optional = true }
tbytes = { version = "0.1.0-alpha1", default-features = false }

[dev-dependencies]
log = "0.4.20"
env_logger = "0.10.1"

[build-dependencies]
cargo-manifest = "0.12.1"
mavspec = { path = "../../mavspec", features = ["rust", "rust_gen"] }
serde = "1.0.193"
toml = "0.8.8"

###########################################################
# Features
###########################################################
[features]
## Default features
default = []
## Enables serde support.
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "mavspec/serde",
]
# Enable global allocator
alloc = ["mavspec/alloc"]
# Enable Rust standard library
std = ["alloc", "mavspec/std"]

###########################################################
# Metadata
###########################################################
[package.metadata.mavspec]
messages = ["HEARTBEAT", "PROTOCOL_VERSION", "MAV_INSPECT_V1", "COMMAND_INT", "COMMAND_LONG"]
all_enums = false
