[package]
name = "mavspec_tests_rust"
description = "Tests for MAVSpec Rust code generation"
version = "0.0.0"
edition = "2021"
authors = ["Mykhailo Ziatin <ziatin@mathwithoutend.org>"]
resolver = "2"
publish = false

[lib]
name = "mavspec_tests_rust"
path = "src/lib.rs"

###########################################################
# Dependencies
###########################################################
[dependencies]
mavspec = { path = "../../mavspec", default-features = false, features = ["rust"] }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", default-features = false, optional = true }

[build-dependencies]
mavspec = { path = "../../mavspec", features = ["rust", "rust_gen"] }

###########################################################
# Features
###########################################################
[features]
## Default features
default = []
## Enables serde support.
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "mavspec/serde",
]
# Enable global allocator
alloc = ["mavspec/alloc"]
# Enable Rust standard library
std = ["alloc", "mavspec/std"]

# Enable `common` MAVLink dialect
common = []

###########################################################
# Metadata
###########################################################
[package.metadata.mavspec]
microservices = ["HEARTBEAT", "COMMAND"]
messages = [
    # MAVLink messages
    "PROTOCOL_VERSION",
    # MAVSpec test messages
    "MAV_INSPECT_V1", "DEBUG", "CLONE", "DEFAULT", "COPY", "FROM", "TRY_FROM", "INTO", "TRY_INTO", "1ST_CLASS_MESSAGE"]
all_enums = false
generate_tests = true

[package.metadata.cargo-machete]
ignored = ["serde_arrays"]
